--- a/src/main/webapp/WEB-INF/flows/mainWindow/home.xhtml
+++ b/src/main/webapp/WEB-INF/flows/mainWindow/home.xhtml
@@ -7,7 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/templates/mainTemplate.xhtml">
     <ui:define name="pageContent">
-        <h1>To działa!</h1>
+        <h1>To działaaaaaaaaaaaaa!</h1>
     </ui:define>
 </ui:composition>
 </html>
