Uzupełnienie encji klienta

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="Refresh" content="0; URL=app/test">
+	<meta http-equiv="Refresh" content="0; URL=app/mainWindow">
 </head>
 </html>
