--- a/src/main/webapp/WEB-INF/flows/mainWindow/home.xhtml
+++ b/src/main/webapp/WEB-INF/flows/mainWindow/home.xhtml
@@ -11,6 +11,7 @@
         <h:form>
        		<p:menubar id="mainWindowMenuBar" style="margin-bottom: 10px;">
        			<p:menuitem value="Otwórz nowe konto" url="/app/addNextAccount"/>
+       			<p:menuitem value="Zlecenia stałe" url="/app/cyclicTransfers"/>
        		</p:menubar>
 			<ui:repeat var="item" value="#{accounts}">
 				<my:account accountStub="#{item}" />
