--- a/src/main/webapp/WEB-INF/flows/deposit/createDepositEnd.xhtml
+++ b/src/main/webapp/WEB-INF/flows/deposit/createDepositEnd.xhtml
@@ -18,7 +18,7 @@
                 
             </h:head>
             <body>
-               <h3>Sukces</h3>
+               <h3>Lokata została założona pomyślnie</h3>
 
   			</body>
     </ui:define>
