polecenie zaplaty - upowaznienie

--- a/src/main/webapp/WEB-INF/flows/orderToPay/orderToPayView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/orderToPay/orderToPayView.xhtml
@@ -21,11 +21,22 @@
 				<p:message for="maxAmount" />
 			</p>
 			<p>
+				<p:message for="accountNumber" />
+			</p>
+			<p>
+				Numer rachunku, z którego pieniądze będą pobierane				
+				<p:selectOneMenu id="accountNumber" value="#{orderToPayVar.accountNumber}"
+					required="true">
+					<f:selectItems value="#{controllerVar.getAccountsStringList(springSecurityContextUtilBean.getLoggedInUser().get())}" var="item"
+						itemValue="#{item}" itemLabel="#{item}" />
+				</p:selectOneMenu>
+			</p>
+			<p>
 				Numer rachunku upoważnionego:
 				<p:inputText id="accountEmpowered"
 					value="#{orderToPayVar.accountEmpowered}"
 					label="'Numer rachunku upoważnionego'" required="true"
-					placeholder="__ ____ ____ ____ ____ ____ ____" maxlength="26"
+					placeholder="__ ____ ____ ____ ____ ____ ____" maxlength="32"
 					onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;" />
 
 			</p>
