--- a/src/main/webapp/WEB-INF/flows/moneyTransfer/moneyTransferView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/moneyTransfer/moneyTransferView.xhtml
@@ -31,6 +31,7 @@
 				<p:message for="senderAccountNumber" />
 			</p>
 			<p>
+				Numer konta, z którego będą przesłane pieniądze:
 				<p:selectOneMenu id="senderAccountNumber" value="#{waitingTransferVar.senderAccountNumber}"
 					required="true">
 					<f:selectItems value="#{controllerVar.getAccountsStringList(springSecurityContextUtilBean.getLoggedInUser().get())}" var="item"
@@ -42,7 +43,7 @@
 				<p:inputText id="targetAccountNumber"
 					value="#{waitingTransferVar.targetAccountNumber}"
 					label="'Numer rachunku docelowego'" required="true"
-					placeholder="__ ____ ____ ____ ____ ____ ____" maxlength="26"
+					placeholder="__ ____ ____ ____ ____ ____ ____" maxlength="32"
 					onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;" />
 			</p>
 			<p>
