--- a/src/main/webapp/WEB-INF/flows/orderToPay/orderToPayEnd.xhtml
+++ b/src/main/webapp/WEB-INF/flows/orderToPay/orderToPayEnd.xhtml
@@ -8,11 +8,11 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <ui:composition template="/WEB-INF/templates/mainTemplate.xhtml">
 	<ui:define name="pageContent">
-		<c:if test="#{flowScope.status}">
-			<p>Polecenie zapłaty zostało utworzone</p>
+		<c:if test="#{not flowScope.status.isError()}">
+			<p>Polecenie zaplaty zostalo utworzone.</p>
 		</c:if>
-		<c:if test="#{not flowScope.status}">
-			<p>Wystąpiły błędy podczas próby stworzenia polecenia zapłaty.</p>
+		<c:if test="#{flowScope.status.isError()}">
+			<p>Wystąpiły błędy podczas tworzenia polecenia zapłaty: #{flowScope.status.getErrorMessage()} </p>
 		</c:if>
 	</ui:define>
 </ui:composition>
