poleceni zaplaty edycja

--- a/src/main/webapp/WEB-INF/flows/orderToPay/orderToPayView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/orderToPay/orderToPayView.xhtml
@@ -68,7 +68,7 @@
 			</p>
 
 
-			<p:commandButton action="orderToPay" value="Dodaj" ajax="false" />
+			<p:commandButton action="orderToPay" value="Dodaj" ajax="false" onstart="showCurtain()" oncomplete="hideCurtain()"/>
 		</h:form>
 	</ui:define>
 </ui:composition>
