--- a/src/main/webapp/WEB-INF/flows/orderToPayShow/orderToPayShowView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/orderToPayShow/orderToPayShowView.xhtml
@@ -71,7 +71,7 @@
 						<p>
 							Numer rachunku upoważnionego:
 							<p:inputText id="accountEmpowered"
-								value="#{data.selectedOrderToPay.accountEmpowered}"
+								value="#{data.formatAccountNumber(data.selectedOrderToPay.accountEmpowered)}"
 								label="'Numer rachunku upoważnionego'" required="true"
 								placeholder="__ ____ ____ ____ ____ ____ ____" maxlength="32"
 								onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;" />
@@ -94,8 +94,10 @@
 							<p:inputText id="maxAmount" value="#{data.selectedOrderToPay.maxAmount}"
 								label="'Maksymalna kwota'" required="true" />
 						</p>
-						<p:commandButton value="Zaktualizuj" actionListener="#{data.updateOrderToPay}" update="@form"/>
-						<p:commandButton value="Wycofaj" actionListener="#{data.terminateOrderToPay}" update="@form"/>
+						<p:commandButton value="Zaktualizuj" actionListener="#{data.updateOrderToPay}" update="@form"
+							onstart="showCurtain()" oncomplete="hideCurtain()"/>
+						<p:commandButton value="Wycofaj" actionListener="#{data.terminateOrderToPay}" update="@form"
+							onstart="showCurtain()" oncomplete="hideCurtain()"/>
 					</p:panelGrid>
 				</p:outputPanel>
 			</p:dialog>
