--- a/src/main/webapp/WEB-INF/flows/moneyTransfer/moneyTransferView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/moneyTransfer/moneyTransferView.xhtml
@@ -79,7 +79,7 @@
 			</p>
 			<br />
 			<p:commandButton action="moneyTransferState" value="Dodaj"
-				ajax="false"/>
+				ajax="false" onstart="showCurtain()" oncomplete="hideCurtain()"/>
 			
 			<p:dialog id="selectRecipientDialog" widgetVar="selectRecipient" modal="true">
         		<c:if test="#{controllerVar.definedRecipeintsAvailable}">
