--- a/src/main/webapp/WEB-INF/flows/orderToPayShow/orderToPayShowView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/orderToPayShow/orderToPayShowView.xhtml
@@ -70,7 +70,7 @@
 						<p>
 							Numer rachunku upoważnionego:
 							<p:inputText id="accountEmpowered"
-								value="#{data.formatAccountNumber(data.selectedOrderToPay.accountEmpowered)}"
+								value="${data.selectedEmpoweredAccountFormat}"
 								label="'Numer rachunku upoważnionego'" required="true"
 								placeholder="__ ____ ____ ____ ____ ____ ____" maxlength="32"
 								onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;" />
