--- a/src/main/webapp/WEB-INF/flows/orderToPayUse/orderToPayUseView.xhtml
+++ b/src/main/webapp/WEB-INF/flows/orderToPayUse/orderToPayUseView.xhtml
@@ -9,7 +9,13 @@
 <ui:composition template="/WEB-INF/templates/mainTemplate.xhtml">
 	<ui:define name="pageContent">
 		<h1>Polecenia zapłaty - wysylanie rachunku</h1>
+
 		<h:form id="formId">
+			<c:if test="#{data.moneyTransferResult != null}">
+				<c:if test="#{data.moneyTransferResult.errorMessage != null}">
+					<p:outputLabel id="moneyTransferResultLabel" value="#{data.moneyTransferResult.errorMessage}" style="color: #FF0000; font-size: 150%;"/>
+				</c:if>
+			</c:if>
 			<p>
 				Numer rachunku wierzyciela, na który zostaną przelane pieniądze dłużnika:
 				<p:selectOneMenu id="accountNumber" value="#{accountNumberVar}"
