--- a/src/main/webapp/WEB-INF/flows/cyclicTranfer/home.xhtml
+++ b/src/main/webapp/WEB-INF/flows/cyclicTranfer/home.xhtml
@@ -10,6 +10,7 @@
 	<ui:param name="hide" value="true"/>
     <ui:define name="pageContent">
         <h:form>
+        	<p:messages />
         	<p:dataTable rows="10" paginator="true" value="#{data.getDefindedCyclicTransfers()}" 
 				var="dto" emptyMessage="Brak zdefiniowanych przelewów cyklicznych."
 				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
