obliczanie rat malejacych, wyswietlanie wynikow

--- a/src/main/webapp/WEB-INF/flows/simulation/simulation.xhtml
+++ b/src/main/webapp/WEB-INF/flows/simulation/simulation.xhtml
@@ -30,7 +30,7 @@
 					<p:inputText value="#{data.creditRate}" required="true" label="Oprocentowanie kredytu" />
 				</div>
 				<div class="ui-grid-row">
-					<h:outputText value="Okres kredytu*: " />
+					<h:outputText value="Okres kredytu (w miesiącach)*: " />
 					<p:inputText value="#{data.instalmentQuantity}" required="true" label="Okres kredytu" />
 				</div>
 				<div class="ui-grid-row">
