Naprawa błędu (przekazywanie niepoprawnego id właściciela) przy przelewach kartą.

--- a/src/main/webapp/WEB-INF/flows/cardMain/debitCardDetails.xhtml
+++ b/src/main/webapp/WEB-INF/flows/cardMain/debitCardDetails.xhtml
@@ -29,7 +29,7 @@
 						<h:outputLabel value="#{debitCard.secureCode}" />
 
 						<h:outputLabel value="Zablokowana :" />
-						<h:outputLabel value="#{debitCard.locked ? 'NIE' : 'TAK'}" />
+						<h:outputLabel value="#{debitCard.locked ? 'tak' : 'nie'}" />
 					</h:panelGrid>
 					<h3>Dzienne limity</h3>
 					<p:dataTable value="#{debitCard}" var="debitCard">
