--- a/src/main/webapp/WEB-INF/flows/cardMain/chargeCardDetails.xhtml
+++ b/src/main/webapp/WEB-INF/flows/cardMain/chargeCardDetails.xhtml
@@ -12,6 +12,13 @@
 				<p:panel
 					header="#{chargeCard.label} (nr. #{chargeCard.number})"
 					style="margin-bottom:20px">
+					
+					<div class="right">
+						<p:commandButton action="lock" value="Zablokuj" disabled="#{chargeCard.locked}"/>
+						<p:commandButton action="unlock" value="Odblokuj" disabled="#{not chargeCard.locked}"/>
+						<p:commandButton action="delete" value="Usuń kartę"/>
+					</div>
+					
 					<h:panelGrid columns="2" cellpadding="10">
 						<h:outputLabel value="Rachunek karty :" />
 						<h:outputLabel value="#{chargeCard.account.number}" />
