Karty płatnicze - usuwanie, spłacanie kart obciążeniowych

--- a/src/main/webapp/WEB-INF/flows/cardMain/cardMain.xhtml
+++ b/src/main/webapp/WEB-INF/flows/cardMain/cardMain.xhtml
@@ -9,8 +9,8 @@
 <ui:composition template="/WEB-INF/templates/mainTemplate.xhtml">
 	<ui:define name="pageContent">
 		<h:form>
-
 			<div class="ui-grid ui-grid-responsive">
+			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
 			<h2>Karty debetowe
 			</h2>
 			
